--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -5,11 +5,11 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5182;https://localhost:5001",
+      "launchUrl": "api/weatherforecast",
+      "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
     }
   }
+}
